vpn-manager/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn-manager
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - manager.vpn.outi.ir
      secretName: vpn-manager-tls
  rules:
    - host: manager.vpn.outi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpn-manager
                port:
                  number: 8080
